# discord-clone

./: .env.example  .gitignore  CLAUDE.md  README.md  SPEC.md  docker-compose.yml  package-lock.json  package.json
.claude/commands/: feature-validate.md
.claude/commands/automated/: story-implement.md  story-plan.md  story-research.md  story-validate.md
.github/workflows/: ci.yml
client/: .dockerignore  Dockerfile.web  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.svelte  app.css  main.ts  vite-env.d.ts
client/src-tauri/: Cargo.toml  make-icon.py  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs  main.rs
client/src/lib/: Avatar.svelte  InlineImage.svelte  InviteFriend.svelte  Login.svelte  MessagePane.svelte  Presence.svelte  Profile.svelte  Register.svelte  VoicePanel.svelte  attachmentImages.ts  attachments.ts  auth.ts  authStore.svelte.ts  channelStore.svelte.ts  channels.ts  config.ts  gateway.svelte.ts  messages.ts  session.ts  themeStore.svelte.ts  types.ts  unreadStore.svelte.ts  updater.svelte.ts  voice.svelte.ts
context/features/m1-auth-ws-presence/: DONE  m1-auth-ws-presence_feature.md
context/features/m2-text-channels/: DONE  m2-text-channels_feature.md
context/features/m3-images/: m3-images_feature.md
context/features/m4-voice-sfu/: m4-voice-sfu_feature.md
context/features/m5-release-docs/: m5-release-docs_feature.md
deploy/: .env.example  Caddyfile  docker-compose.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md
scripts/: build-updater-manifest.mjs  build_waves.py  resolve_story_meta.py
server/: .env.example  Dockerfile  package-lock.json  package.json
server/src/: app.ts  attachments.ts  auth.ts  channels.ts  cli.ts  config.ts  crypto.ts  db.ts  images.ts  index.ts  schema.ts  tokens.ts  types.ts  uploads.ts
server/src/routes/: attachments.ts  auth.ts  channels.ts  users.ts
server/src/voice/: sfu.ts
server/src/ws/: gateway.ts  hub.ts  presence.ts  voice-registry.ts
(+128 files in other folders)
