[package]
name = "discord-clone"
version = "0.2.0"
description = "discord-clone desktop client"
authors = ["discord-clone"]
edition = "2021"
rust-version = "1.77"

# The library is consumed by main.rs (desktop) and by the mobile entry point.
[lib]
name = "discord_clone_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native", "sync-secret-service", "crypto-rust"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
